use lab activity times for lab courses